# Preacticas

./: .gitignore  README.md  acciones  acciones.cpp  acciones_remoto.cpp  carrito  carrito_compras  carrito_compras.cpp  excel.cpp
Biblioteca/: CMakeLists.txt
Biblioteca/include/: Biblioteca.h  Libro.h
Biblioteca/src/: Biblioteca.cpp  Libro.cpp  main.cpp
ProductoTienda-CPP/: CMakeLists.txt  README.md  README.md:Zone.Identifier
ProductoTienda-CPP/app/: main.cpp
ProductoTienda-CPP/docs/: Doxyfile
ProductoTienda-CPP/include/: Producto.h
ProductoTienda-CPP/src/: Producto.cpp
ProyectosPOO/AlquilerVehiculos/: CMakeLists.txt  README.md
ProyectosPOO/AlquilerVehiculos/include/: Auto.h  Bicicleta.h  SistemaAlquiler.h  Vehiculo.h
ProyectosPOO/AlquilerVehiculos/src/: Auto.cpp  Bicicleta.cpp  SistemaAlquiler.cpp  Vehiculo.cpp  main.cpp
ProyectosPOO/Biblioteca/: CMakeLists.txt  README.md
ProyectosPOO/Biblioteca/include/: Biblioteca.h  Libro.h  Usuario.h
ProyectosPOO/Biblioteca/src/: Biblioteca.cpp  Libro.cpp  Usuario.cpp  main.cpp
SistemaAlquiler/: CMakeLists.txt
SistemaAlquiler/include/: Auto.h  Bicicleta.h  SistemaAlquiler.h  Vehiculo.h
SistemaAlquiler/src/: Auto.cpp  Bicicleta.cpp  SistemaAlquiler.cpp  Vehiculo.cpp  main.cpp
practicas/: pascal.cpp
